[TD-154] Initial structure to support integrated polars plugins expansions (#153)

--- a/books/dguide/book.toml
+++ b/books/dguide/book.toml
@@ -10,3 +10,6 @@ src = "src"
 title = "Tabsdata Developer Guide"
 
 [preprocessor.image-size]
+
+[output.html]
+additional-css = ["./theme/custom.css"]
