--- a/make/fragments/scripts/environment.toml
+++ b/make/fragments/scripts/environment.toml
@@ -145,15 +145,15 @@ env_scripts = [
 
     is_musl = eq ${td-target} "x86_64-unknown-linux-musl"
     if ${is_musl}
-        PROJECT_ROOT_CARGO_TOML = set "./Cargo.toml"
-        PROJECT_MACROS_CARGO_TOML = set "./macros/Cargo.toml"
-        set_env PROJECT_ROOT_CARGO_TOML ${PROJECT_ROOT_CARGO_TOML}
-        set_env PROJECT_MACROS_CARGO_TOML ${PROJECT_MACROS_CARGO_TOML}
+        PROJECT_RS_ROOT_CARGO_TOML = set "./Cargo.toml"
+        PROJECT_RS_TD_MACROS_CARGO_TOML = set "./macros/Cargo.toml"
+        set_env PROJECT_RS_ROOT_CARGO_TOML ${PROJECT_RS_ROOT_CARGO_TOML}
+        set_env PROJECT_RS_TD_MACROS_CARGO_TOML ${PROJECT_RS_TD_MACROS_CARGO_TOML}
     end
-    PROJECT_ROOT_CARGO_TOML = get_env PROJECT_ROOT_CARGO_TOML
-    PROJECT_MACROS_CARGO_TOML = get_env PROJECT_MACROS_CARGO_TOML
-    debug "✅ Materialized PROJECT_ROOT_CARGO_TOML: '${PROJECT_ROOT_CARGO_TOML}'"
-    debug "✅ Materialized PROJECT_MACROS_CARGO_TOML: '${PROJECT_MACROS_CARGO_TOML}'"
+    PROJECT_RS_ROOT_CARGO_TOML = get_env PROJECT_RS_ROOT_CARGO_TOML
+    PROJECT_RS_TD_MACROS_CARGO_TOML = get_env PROJECT_RS_TD_MACROS_CARGO_TOML
+    debug "✅ Materialized PROJECT_RS_ROOT_CARGO_TOML: '${PROJECT_RS_ROOT_CARGO_TOML}'"
+    debug "✅ Materialized PROJECT_RS_TD_MACROS_CARGO_TOML: '${PROJECT_RS_TD_MACROS_CARGO_TOML}'"
 
     if not is_empty ${macros-features}
         macros-test-features = concat "dummy" "," ${macros-features}
@@ -169,21 +169,29 @@ env_scripts = [
         modules-test-features-test_logging = set "td-test,test_logging"
         modules-test-features-test_tower_metadata = set "td-test,test_tower_metadata"
     end
+    if not is_empty ${expansions-features}
+        expansions-test-features = concat "dummy" "," ${expansions-features}
+    else
+        expansions-test-features = set "td-test"
+    end
 
     set_env macros-test-features ${macros-test-features}
     set_env modules-test-features ${modules-test-features}
     set_env modules-test-features-test_logging ${modules-test-features-test_logging}
     set_env modules-test-features-test_tower_metadata ${modules-test-features-test_tower_metadata}
+    set_env expansions-test-features ${expansions-test-features}
 
     macros-test-features = get_env macros-test-features
     modules-test-features = get_env modules-test-features
     modules-test-features-test_logging = get_env modules-test-features-test_logging
     modules-test-features-test_tower_metadata = get_env modules-test-features-test_tower_metadata
+    expansions-test-features = get_env expansions-test-features
 
     debug "✅ Using 'macros-test-features': ${macros-test-features}"
     debug "✅ Using 'modules-test-features': ${modules-test-features}"
     debug "✅ Using 'modules-test-features-test_logging': ${modules-test-features-test_logging}"
     debug "✅ Using 'modules-test-features-test_tower_metadata': ${modules-test-features-test_tower_metadata}"
+    debug "✅ Using 'expansions-test-features': ${expansions-test-features}"
     ''',
 
     # Check path
