--- a/make/fragments/tasks/build_rs.toml
+++ b/make/fragments/tasks/build_rs.toml
@@ -3,6 +3,7 @@
 #
 
 [tasks.build_rs]
+category = "02 - Build"
 description = "Task 'build' for Rust projects"
 run_task = [
     { name = [
@@ -14,15 +15,18 @@ run_task = [
 ]
 
 [tasks.build_all_rs]
+category = "02 - Build"
 private = true
 run_task = [
     { name = [
         "build_all_rs_macros",
-        "build_all_rs_modules"
+        "build_all_rs_modules",
+        "build_all_rs_expansions"
     ] }
 ]
 
 [tasks.build_all_rs_macros]
+category = "02 - Build"
 private = true
 cwd = "${PROJECT_ROOT_FOLDER}"
 script_runner = "@duckscript"
@@ -30,11 +34,12 @@ script = [
     '''
     !include_files ./make/libraries/log.ds
 
-    debug "🚀 ${td-cargo} %{td-toolchain-token}%{td-toolchain} build %{td-target-token} %{td-target} --profile ${td-profile} --workspace --manifest-path ${PROJECT_MACROS_CARGO_TOML} --all-features --lib --bins --examples"
-    exec --fail-on-error ${td-cargo} %{td-toolchain-token}%{td-toolchain} build %{td-target-token} %{td-target} --profile ${td-profile} --workspace --manifest-path ${PROJECT_MACROS_CARGO_TOML} --all-features --lib --bins --examples
+    debug "🚀 ${td-cargo} %{td-toolchain-token}%{td-toolchain} build %{td-target-token} %{td-target} --profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_TD_MACROS_CARGO_TOML} --all-features --lib --bins --examples"
+    exec --fail-on-error ${td-cargo} %{td-toolchain-token}%{td-toolchain} build %{td-target-token} %{td-target} --profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_TD_MACROS_CARGO_TOML} --all-features --lib --bins --examples
     ''']
 
 [tasks.build_all_rs_modules]
+category = "02 - Build"
 private = true
 cwd = "${PROJECT_ROOT_FOLDER}"
 script_runner = "@duckscript"
@@ -42,20 +47,36 @@ script = [
     '''
     !include_files ./make/libraries/log.ds
 
-    debug "🚀 ${td-cargo} %{td-toolchain-token}%{td-toolchain} build %{td-target-token} %{td-target} --profile ${td-profile} --workspace --manifest-path ${PROJECT_ROOT_CARGO_TOML} --all-features --lib --bins --examples"
-    exec --fail-on-error ${td-cargo} %{td-toolchain-token}%{td-toolchain} build %{td-target-token} %{td-target} --profile ${td-profile} --workspace --manifest-path ${PROJECT_ROOT_CARGO_TOML} --all-features --lib --bins --examples
+    debug "🚀 ${td-cargo} %{td-toolchain-token}%{td-toolchain} build %{td-target-token} %{td-target} --profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_ROOT_CARGO_TOML} --all-features --lib --bins --examples"
+    exec --fail-on-error ${td-cargo} %{td-toolchain-token}%{td-toolchain} build %{td-target-token} %{td-target} --profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_ROOT_CARGO_TOML} --all-features --lib --bins --examples
+    ''']
+
+[tasks.build_all_rs_expansions]
+category = "02 - Build"
+private = true
+cwd = "${PROJECT_ROOT_FOLDER}"
+script_runner = "@duckscript"
+script = [
+    '''
+    !include_files ./make/libraries/log.ds
+
+    debug "🚀 ${td-cargo} %{td-toolchain-token}%{td-toolchain} build %{td-target-token} %{td-target} --profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_TY_EXPANSIONS_CARGO_TOML} --lib --bins --examples"
+    exec --fail-on-error ${td-cargo} %{td-toolchain-token}%{td-toolchain} build %{td-target-token} %{td-target} --profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_TY_EXPANSIONS_CARGO_TOML} --lib --bins --examples
     ''']
 
 [tasks.build_none_rs]
+category = "02 - Build"
 private = true
 run_task = [
     { name = [
         "build_none_rs_macros",
-        "build_none_rs_modules"
+        "build_none_rs_modules",
+        "build_none_rs_expansions"
     ] }
 ]
 
 [tasks.build_none_rs_macros]
+category = "02 - Build"
 private = true
 cwd = "${PROJECT_ROOT_FOLDER}"
 script_runner = "@duckscript"
@@ -63,11 +84,12 @@ script = [
     '''
     !include_files ./make/libraries/log.ds
 
-    debug "🚀 ${td-cargo} %{td-toolchain-token}%{td-toolchain} build %{td-target-token} %{td-target} --profile ${td-profile} --workspace --manifest-path ${PROJECT_MACROS_CARGO_TOML} --lib --bins"
-    exec --fail-on-error ${td-cargo} %{td-toolchain-token}%{td-toolchain} build %{td-target-token} %{td-target} --profile ${td-profile} --workspace --manifest-path ${PROJECT_MACROS_CARGO_TOML} --lib --bins
+    debug "🚀 ${td-cargo} %{td-toolchain-token}%{td-toolchain} build %{td-target-token} %{td-target} --profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_TD_MACROS_CARGO_TOML} --lib --bins"
+    exec --fail-on-error ${td-cargo} %{td-toolchain-token}%{td-toolchain} build %{td-target-token} %{td-target} --profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_TD_MACROS_CARGO_TOML} --lib --bins
     ''']
 
 [tasks.build_none_rs_modules]
+category = "02 - Build"
 private = true
 cwd = "${PROJECT_ROOT_FOLDER}"
 script_runner = "@duckscript"
@@ -75,6 +97,19 @@ script = [
     '''
     !include_files ./make/libraries/log.ds
 
-    debug "🚀 ${td-cargo} %{td-toolchain-token}%{td-toolchain} build %{td-target-token} %{td-target} --profile ${td-profile} --workspace --manifest-path ${PROJECT_ROOT_CARGO_TOML} --lib --bins"
-    exec --fail-on-error ${td-cargo} %{td-toolchain-token}%{td-toolchain} build %{td-target-token} %{td-target} --profile ${td-profile} --workspace --manifest-path ${PROJECT_ROOT_CARGO_TOML} --lib --bins
+    debug "🚀 ${td-cargo} %{td-toolchain-token}%{td-toolchain} build %{td-target-token} %{td-target} --profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_ROOT_CARGO_TOML} --lib --bins"
+    exec --fail-on-error ${td-cargo} %{td-toolchain-token}%{td-toolchain} build %{td-target-token} %{td-target} --profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_ROOT_CARGO_TOML} --lib --bins
+    ''']
+
+[tasks.build_none_rs_expansions]
+category = "02 - Build"
+private = true
+cwd = "${PROJECT_ROOT_FOLDER}"
+script_runner = "@duckscript"
+script = [
+    '''
+    !include_files ./make/libraries/log.ds
+
+    debug "🚀 ${td-cargo} %{td-toolchain-token}%{td-toolchain} build %{td-target-token} %{td-target} --profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_TY_EXPANSIONS_CARGO_TOML} --lib --bins"
+    exec --fail-on-error ${td-cargo} %{td-toolchain-token}%{td-toolchain} build %{td-target-token} %{td-target} --profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_TY_EXPANSIONS_CARGO_TOML} --lib --bins
     ''']
