--- a/make/fragments/tasks/clean_py.toml
+++ b/make/fragments/tasks/clean_py.toml
@@ -3,11 +3,12 @@
 #
 
 [tasks.clean_py]
+category = "01 - Clean"
 description = "Task 'clean' for Python projects"
 run_task = [
     { name = [
         "clean_py_root",
-        "clean_py_td_features",
+        "clean_py_ta_features",
         "clean_py_ta_tableframe",
         "clean_py_te_tableframe",
         "clean_py_tabsdata",
@@ -17,36 +18,43 @@ run_task = [
 ]
 
 [tasks.clean_py_root]
+category = "01 - Clean"
 private = true
 command = "python3"
 args = ["${CLEAN_PYTHON_PY}", "${PROJECT_ROOT_FOLDER}", "py"]
 
-[tasks.clean_py_td_features]
+[tasks.clean_py_ta_features]
+category = "01 - Clean"
 private = true
 command = "python3"
-args = ["${CLEAN_PYTHON_PY}", "${PROJECT_TD_FEATURES_FOLDER}", "py"]
+args = ["${CLEAN_PYTHON_PY}", "${PROJECT_PY_TA_FEATURES_FOLDER}", "py"]
 
 [tasks.clean_py_ta_tableframe]
+category = "01 - Clean"
 private = true
 command = "python3"
-args = ["${CLEAN_PYTHON_PY}", "${PROJECT_TA_TABLEFRAME_FOLDER}", "py"]
+args = ["${CLEAN_PYTHON_PY}", "${PROJECT_PY_TA_TABLEFRAME_FOLDER}", "py"]
 
 [tasks.clean_py_te_tableframe]
+category = "01 - Clean"
 private = true
 command = "python3"
-args = ["${CLEAN_PYTHON_PY}", "${PROJECT_TE_TABLEFRAME_FOLDER}", "py"]
+args = ["${CLEAN_PYTHON_PY}", "${PROJECT_PY_TE_TABLEFRAME_FOLDER}", "py"]
 
 [tasks.clean_py_tabsdata]
+category = "01 - Clean"
 private = true
 command = "python3"
-args = ["${CLEAN_PYTHON_PY}", "${PROJECT_TD_SDK_FOLDER}", "py"]
+args = ["${CLEAN_PYTHON_PY}", "${PROJECT_PY_TD_SDK_FOLDER}", "py"]
 
 [tasks.clean_py_tabsdata_salesforce]
+category = "01 - Clean"
 private = true
 command = "python3"
-args = ["${CLEAN_PYTHON_PY}", "${PROJECT_TABSDATA_SALESFORCE_FOLDER}", "py"]
+args = ["${CLEAN_PYTHON_PY}", "${PROJECT_PY_TABSDATA_SALESFORCE_FOLDER}", "py"]
 
 [tasks.clean_py_tabsdata_mongodb]
+category = "01 - Clean"
 private = true
 command = "python3"
-args = ["${CLEAN_PYTHON_PY}", "${PROJECT_TABSDATA_MONGODB_FOLDER}", "py"]
+args = ["${CLEAN_PYTHON_PY}", "${PROJECT_PY_TABSDATA_MONGODB_FOLDER}", "py"]
