--- a/make/fragments/tasks/test_py.toml
+++ b/make/fragments/tasks/test_py.toml
@@ -3,12 +3,13 @@
 #
 
 [tasks.test_py]
+category = "02 - Test"
 description = "Task 'test' for Python projects"
 dependencies = ["set_mode_test_py"]
 run_task = [
     { name = [
         "pre-test_py",
-        "test_py_td_features",
+        "test_py_ta_features",
         "test_py_ta_tableframe",
         "test_py_te_tableframe",
         "test_py_tabsdata",
@@ -18,7 +19,8 @@ run_task = [
     ] }
 ]
 
-[tasks.test_py_td_features]
+[tasks.test_py_ta_features]
+category = "02 - Test"
 private = true
 dependencies = ["set_mode_test_py"]
 script_runner = "@duckscript"
@@ -29,14 +31,14 @@ script = [
     verbose = get_env TD_VERBOSE
     compile = get_env TD_COMPILE
 
-    cd "${PROJECT_TD_FEATURES_FOLDER}"
+    cd "${PROJECT_PY_TA_FEATURES_FOLDER}"
 
     if eq ${verbose} "false"
-        debug "🚀 pytest -n 16 --dist=loadfile ${TESTS_TD_FEATURES_FOLDER} --cov-config=.coveragerc --cov -m \"${MARKERS}\""
-        exit_code = exec --get-exit-code pytest -n 16 --dist=loadfile ${TESTS_TD_FEATURES_FOLDER} --cov-config=.coveragerc --cov -m "${MARKERS}"
+        debug "🚀 pytest -n 16 --dist=loadfile ${TESTS_PY_TA_FEATURES_FOLDER} --cov-config=.coveragerc --cov -m \"${MARKERS}\""
+        exit_code = exec --get-exit-code pytest -n 16 --dist=loadfile ${TESTS_PY_TA_FEATURES_FOLDER} --cov-config=.coveragerc --cov -m "${MARKERS}"
     else
-        debug "🚀 pytest -${verbose} --full-trace --log-level=DEBUG -n 16 --dist=loadfile ${TESTS_TD_FEATURES_FOLDER} --cov-config=.coveragerc --cov -m \"${MARKERS}\""
-        exit_code = exec --get-exit-code pytest -${verbose} --full-trace --log-level=DEBUG -n 16 --dist=loadfile ${TESTS_TD_FEATURES_FOLDER} --cov-config=.coveragerc --cov -m "${MARKERS}"
+        debug "🚀 pytest -${verbose} --full-trace --log-level=DEBUG -n 16 --dist=loadfile ${TESTS_PY_TA_FEATURES_FOLDER} --cov-config=.coveragerc --cov -m \"${MARKERS}\""
+        exit_code = exec --get-exit-code pytest -${verbose} --full-trace --log-level=DEBUG -n 16 --dist=loadfile ${TESTS_PY_TA_FEATURES_FOLDER} --cov-config=.coveragerc --cov -m "${MARKERS}"
     end
     if not eq ${exit_code} "5"
         code = exit ${exit_code}
@@ -44,6 +46,7 @@ script = [
     ''']
 
 [tasks.test_py_ta_tableframe]
+category = "02 - Test"
 private = true
 dependencies = ["set_mode_test_py"]
 script_runner = "@duckscript"
@@ -54,14 +57,14 @@ script = [
     verbose = get_env TD_VERBOSE
     compile = get_env TD_COMPILE
 
-    cd "${PROJECT_TA_TABLEFRAME_FOLDER}"
+    cd "${PROJECT_PY_TA_TABLEFRAME_FOLDER}"
 
     if eq ${verbose} "false"
-        debug "🚀 pytest -n 16 --dist=loadfile ${TESTS_TA_TABLEFRAME_FOLDER} --cov-config=.coveragerc --cov -m \"${MARKERS}\""
-        exit_code = exec --get-exit-code pytest -n 16 --dist=loadfile ${TESTS_TA_TABLEFRAME_FOLDER} --cov-config=.coveragerc --cov -m "${MARKERS}"
+        debug "🚀 pytest -n 16 --dist=loadfile ${TESTS_PY_TA_TABLEFRAME_FOLDER} --cov-config=.coveragerc --cov -m \"${MARKERS}\""
+        exit_code = exec --get-exit-code pytest -n 16 --dist=loadfile ${TESTS_PY_TA_TABLEFRAME_FOLDER} --cov-config=.coveragerc --cov -m "${MARKERS}"
     else
-        debug "🚀 pytest -${verbose} --full-trace --log-level=DEBUG -n 16 --dist=loadfile ${TESTS_TA_TABLEFRAME_FOLDER} --cov-config=.coveragerc --cov -m \"${MARKERS}\""
-        exit_code = exec --get-exit-code pytest -${verbose} --full-trace --log-level=DEBUG -n 16 --dist=loadfile ${TESTS_TA_TABLEFRAME_FOLDER} --cov-config=.coveragerc --cov -m "${MARKERS}"
+        debug "🚀 pytest -${verbose} --full-trace --log-level=DEBUG -n 16 --dist=loadfile ${TESTS_PY_TA_TABLEFRAME_FOLDER} --cov-config=.coveragerc --cov -m \"${MARKERS}\""
+        exit_code = exec --get-exit-code pytest -${verbose} --full-trace --log-level=DEBUG -n 16 --dist=loadfile ${TESTS_PY_TA_TABLEFRAME_FOLDER} --cov-config=.coveragerc --cov -m "${MARKERS}"
     end
     if not eq ${exit_code} "5"
         code = exit ${exit_code}
@@ -69,6 +72,7 @@ script = [
     ''']
 
 [tasks.test_py_te_tableframe]
+category = "02 - Test"
 private = true
 dependencies = ["set_mode_test_py"]
 script_runner = "@duckscript"
@@ -79,14 +83,14 @@ script = [
     verbose = get_env TD_VERBOSE
     compile = get_env TD_COMPILE
 
-    cd ${PROJECT_TE_TABLEFRAME_FOLDER}
+    cd ${PROJECT_PY_TE_TABLEFRAME_FOLDER}
 
     if eq ${verbose} "false"
-        debug "🚀 pytest -n 16 --dist=loadfile ${TESTS_TE_TABLEFRAME_FOLDER} --cov-config=.coveragerc --cov -m \"${MARKERS}\""
-        exit_code = exec --get-exit-code pytest -n 16  --dist=loadfile ${TESTS_TE_TABLEFRAME_FOLDER} --cov-config=.coveragerc --cov -m "${MARKERS}"
+        debug "🚀 pytest -n 16 --dist=loadfile ${TESTS_PY_TE_TABLEFRAME_FOLDER} --cov-config=.coveragerc --cov -m \"${MARKERS}\""
+        exit_code = exec --get-exit-code pytest -n 16  --dist=loadfile ${TESTS_PY_TE_TABLEFRAME_FOLDER} --cov-config=.coveragerc --cov -m "${MARKERS}"
     else
-        debug "🚀 pytest -${verbose} --full-trace --log-level=DEBUG -n 16  --dist=loadfile ${TESTS_TE_TABLEFRAME_FOLDER} --cov-config=.coveragerc --cov -m \"${MARKERS}\""
-        exit_code = exec --get-exit-code pytest -${verbose} --full-trace --log-level=DEBUG -n 16 --dist=loadfile ${TESTS_TE_TABLEFRAME_FOLDER} --cov-config=.coveragerc --cov -m "${MARKERS}"
+        debug "🚀 pytest -${verbose} --full-trace --log-level=DEBUG -n 16  --dist=loadfile ${TESTS_PY_TE_TABLEFRAME_FOLDER} --cov-config=.coveragerc --cov -m \"${MARKERS}\""
+        exit_code = exec --get-exit-code pytest -${verbose} --full-trace --log-level=DEBUG -n 16 --dist=loadfile ${TESTS_PY_TE_TABLEFRAME_FOLDER} --cov-config=.coveragerc --cov -m "${MARKERS}"
     end
     if not eq ${exit_code} "5"
         code = exit ${exit_code}
@@ -94,6 +98,7 @@ script = [
     ''']
 
 [tasks.test_py_tabsdata]
+category = "02 - Test"
 private = true
 dependencies = ["set_mode_test_py"]
 script_runner = "@duckscript"
@@ -104,14 +109,14 @@ script = [
     verbose = get_env TD_VERBOSE
     compile = get_env TD_COMPILE
 
-    cd ${PROJECT_TD_SDK_FOLDER}
+    cd ${PROJECT_PY_TD_SDK_FOLDER}
 
     if eq ${verbose} "false"
-        debug "🚀 pytest -n 16 --dist=loadfile ${TESTS_TABSDATA_FOLDER} --cov-config=.coveragerc --cov -m \"${MARKERS}\""
-        exit_code = exec --get-exit-code pytest -n 16 --dist=loadfile ${TESTS_TABSDATA_FOLDER} --cov-config=.coveragerc --cov -m "${MARKERS}"
+        debug "🚀 pytest -n 16 --dist=loadfile ${TESTS_PY_TABSDATA_FOLDER} --cov-config=.coveragerc --cov -m \"${MARKERS}\""
+        exit_code = exec --get-exit-code pytest -n 16 --dist=loadfile ${TESTS_PY_TABSDATA_FOLDER} --cov-config=.coveragerc --cov -m "${MARKERS}"
     else
-        debug "🚀 pytest -v --full-trace --log-level=DEBUG -n 16 --dist=loadfile ${TESTS_TABSDATA_FOLDER} --cov-config=.coveragerc --cov -m \"${MARKERS}\""
-        exit_code = exec --get-exit-code pytest -v --full-trace --log-level=DEBUG -n 16 --dist=loadfile ${TESTS_TABSDATA_FOLDER} --cov-config=.coveragerc --cov -m "${MARKERS}"
+        debug "🚀 pytest -v --full-trace --log-level=DEBUG -n 16 --dist=loadfile ${TESTS_PY_TABSDATA_FOLDER} --cov-config=.coveragerc --cov -m \"${MARKERS}\""
+        exit_code = exec --get-exit-code pytest -v --full-trace --log-level=DEBUG -n 16 --dist=loadfile ${TESTS_PY_TABSDATA_FOLDER} --cov-config=.coveragerc --cov -m "${MARKERS}"
     end
     if not eq ${exit_code} "5"
         code = exit ${exit_code}
@@ -119,6 +124,7 @@ script = [
     ''']
 
 [tasks.test_py_tabsdata_salesforce]
+category = "02 - Test"
 private = true
 dependencies = ["set_mode_test_py"]
 script_runner = "@duckscript"
@@ -129,14 +135,14 @@ script = [
     verbose = get_env TD_VERBOSE
     compile = get_env TD_COMPILE
 
-    cd ${PROJECT_TABSDATA_SALESFORCE_FOLDER}
+    cd ${PROJECT_PY_TABSDATA_SALESFORCE_FOLDER}
 
     if eq ${verbose} "false"
-        debug "🚀 pytest -n 16 --dist=loadfile ${TESTS_TABSDATA_SALESFORCE_FOLDER} --cov-config=.coveragerc --cov -m \"${MARKERS}\""
-        exit_code = exec --get-exit-code pytest -n 16 --dist=loadfile ${TESTS_TABSDATA_SALESFORCE_FOLDER} --cov-config=.coveragerc --cov -m "${MARKERS}"
+        debug "🚀 pytest -n 16 --dist=loadfile ${TESTS_PY_TABSDATA_SALESFORCE_FOLDER} --cov-config=.coveragerc --cov -m \"${MARKERS}\""
+        exit_code = exec --get-exit-code pytest -n 16 --dist=loadfile ${TESTS_PY_TABSDATA_SALESFORCE_FOLDER} --cov-config=.coveragerc --cov -m "${MARKERS}"
     else
-        debug "🚀 pytest -v --full-trace --log-level=DEBUG -n 16 --dist=loadfile ${TESTS_TABSDATA_SALESFORCE_FOLDER} --cov-config=.coveragerc --cov -m \"${MARKERS}\""
-        exit_code = exec --get-exit-code pytest -v --full-trace --log-level=DEBUG -n 16 --dist=loadfile ${TESTS_TABSDATA_SALESFORCE_FOLDER} --cov-config=.coveragerc --cov -m "${MARKERS}"
+        debug "🚀 pytest -v --full-trace --log-level=DEBUG -n 16 --dist=loadfile ${TESTS_PY_TABSDATA_SALESFORCE_FOLDER} --cov-config=.coveragerc --cov -m \"${MARKERS}\""
+        exit_code = exec --get-exit-code pytest -v --full-trace --log-level=DEBUG -n 16 --dist=loadfile ${TESTS_PY_TABSDATA_SALESFORCE_FOLDER} --cov-config=.coveragerc --cov -m "${MARKERS}"
     end
     if not eq ${exit_code} "5"
         code = exit ${exit_code}
@@ -144,6 +150,7 @@ script = [
     ''']
 
 [tasks.test_py_tabsdata_mongodb]
+category = "02 - Test"
 private = true
 dependencies = ["set_mode_test_py"]
 script_runner = "@duckscript"
@@ -154,14 +161,14 @@ script = [
     verbose = get_env TD_VERBOSE
     compile = get_env TD_COMPILE
 
-    cd ${PROJECT_TABSDATA_MONGODB_FOLDER}
+    cd ${PROJECT_PY_TABSDATA_MONGODB_FOLDER}
 
     if eq ${verbose} "false"
-        debug "🚀 pytest -n 16 --dist=loadfile ${TESTS_TABSDATA_MONGODB_FOLDER} --cov-config=.coveragerc --cov -m \"${MARKERS}\""
-        exit_code = exec --get-exit-code pytest -n 16 --dist=loadfile ${TESTS_TABSDATA_MONGODB_FOLDER} --cov-config=.coveragerc --cov -m "${MARKERS}"
+        debug "🚀 pytest -n 16 --dist=loadfile ${TESTS_PY_TABSDATA_MONGODB_FOLDER} --cov-config=.coveragerc --cov -m \"${MARKERS}\""
+        exit_code = exec --get-exit-code pytest -n 16 --dist=loadfile ${TESTS_PY_TABSDATA_MONGODB_FOLDER} --cov-config=.coveragerc --cov -m "${MARKERS}"
     else
-        debug "🚀 pytest -v --full-trace --log-level=DEBUG -n 16 --dist=loadfile ${TESTS_TABSDATA_MONGODB_FOLDER} --cov-config=.coveragerc --cov -m \"${MARKERS}\""
-        exit_code = exec --get-exit-code pytest -v --full-trace --log-level=DEBUG -n 16 --dist=loadfile ${TESTS_TABSDATA_MONGODB_FOLDER} --cov-config=.coveragerc --cov -m "${MARKERS}"
+        debug "🚀 pytest -v --full-trace --log-level=DEBUG -n 16 --dist=loadfile ${TESTS_PY_TABSDATA_MONGODB_FOLDER} --cov-config=.coveragerc --cov -m \"${MARKERS}\""
+        exit_code = exec --get-exit-code pytest -v --full-trace --log-level=DEBUG -n 16 --dist=loadfile ${TESTS_PY_TABSDATA_MONGODB_FOLDER} --cov-config=.coveragerc --cov -m "${MARKERS}"
     end
     if not eq ${exit_code} "5"
         code = exit ${exit_code}
@@ -169,6 +176,7 @@ script = [
     ''']
 
 [tasks.set_mode_test_py]
+category = "02 - Test"
 private = true
 script_runner = "@duckscript"
 script = [
@@ -191,6 +199,7 @@ script = [
     ''']
 
 [tasks.pre-test_py]
+category = "02 - Test"
 private = true
 dependencies = ["set_mode_test_py", "license"]
 script_runner = "@duckscript"
@@ -218,11 +227,13 @@ script = [
     ''']
 
 [tasks.copy_assets]
+category = "02 - Test"
 private = true
 command = "python3"
 args = ["${COPY_ASSETS_PY}"]
 
 [tasks.setup_pytest_tabsdata]
+category = "02 - Test"
 private = true
 script_runner = "@duckscript"
 script = [
@@ -251,8 +262,8 @@ script = [
     cd ../../..
 
     debug "🔷 _____ Setting up tabsdata pytest python path..."
-    debug "🚀 python3 ${PROJECT_TD_SDK_FOLDER}/tests_tabsdata/bootest.py"
-    output = exec --fail-on-error python3 ${PROJECT_TD_SDK_FOLDER}tests_tabsdata/bootest.py
+    debug "🚀 python3 ${PROJECT_PY_TD_SDK_FOLDER}/tests_tabsdata/bootest.py"
+    output = exec --fail-on-error python3 ${PROJECT_PY_TD_SDK_FOLDER}tests_tabsdata/bootest.py
     debug "📦 The received pythonpath is ${output.stdout}"
     pythonpath = set ${output.stdout}
     debug "✅ Python system path will be added: ${pythonpath}"
@@ -277,18 +288,19 @@ script = [
     debug "🔅 tabsdata development python package location set to: ${set_td_tabsdata_dev_pkg}"
 
     debug "🔷 _____ Setting up tabsdata_salesforce development package mode..."
-    set_env TD_TABSDATA_SALESFORCE_DEV_PKG ${PROJECT_TABSDATA_SALESFORCE_FOLDER}
+    set_env TD_TABSDATA_SALESFORCE_DEV_PKG ${PROJECT_PY_TABSDATA_SALESFORCE_FOLDER}
     set_td_tabsdata_salesforce_dev_pkg = get_env TD_TABSDATA_SALESFORCE_DEV_PKG
     debug "🔅 tabsdata_salesforce development python package location set to: ${set_td_tabsdata_salesforce_dev_pkg}"
 
     debug "🔷 _____ Setting up tabsdata_mongodb development package mode..."
-    set_env TD_TABSDATA_MONGODB_DEV_PKG ${PROJECT_TABSDATA_MONGODB_FOLDER}
+    set_env TD_TABSDATA_MONGODB_DEV_PKG ${PROJECT_PY_TABSDATA_MONGODB_FOLDER}
     set_td_tabsdata_mongodb_dev_pkg = get_env TD_TABSDATA_MONGODB_DEV_PKG
     debug "🔅 tabsdata_mongodb development python package location set to: ${set_td_tabsdata_mongodb_dev_pkg}"
 
     ''']
 
 [tasks.start_pytest_tabsdata]
+category = "02 - Test"
 private = true
 script_runner = "@duckscript"
 script = [
@@ -324,6 +336,7 @@ script = [
     ''']
 
 [tasks.status_pytest_tabsdata]
+category = "02 - Test"
 private = true
 script_runner = "@duckscript"
 script = [
@@ -357,6 +370,7 @@ script = [
     ''']
 
 [tasks.stop_pytest_tabsdata]
+category = "02 - Test"
 private = true
 script_runner = "@duckscript"
 script = [
@@ -390,6 +404,7 @@ script = [
     ''']
 
 [tasks.remove_pytest_tabsdata]
+category = "02 - Test"
 private = true
 script_runner = "@duckscript"
 script = [
@@ -411,6 +426,7 @@ script = [
     ''']
 
 [tasks.post-test_py]
+category = "02 - Test"
 private = true
 dependencies = ["set_mode_test_py"]
 script_runner = "@duckscript"
