--- a/client/td-sdk/pytest.ini
+++ b/client/td-sdk/pytest.ini
@@ -13,6 +13,9 @@ markers =
     mongodb: mark tests that require the tabsdata_mongodb package.
     mysql: mark test as requiring a mysql docker container.
     oracle: mark test as requiring a oracle docker container. Also, the Oracle Instant Client must be installed.
+    performance: mark tests that will be run in a purely performance environment. The
+        amount of records used in each test can be configured through the
+        --performance-size parameter, which defaults to 25000.
     postgres: mark test as requiring a postgresql docker container.
     requires_internet: mark those tests that require an Internet connection to be run.
     salesforce: mark tests that require the tabsdata_salesforce package.
