--- a/make/fragments/tasks/test_rs.toml
+++ b/make/fragments/tasks/test_rs.toml
@@ -16,7 +16,7 @@ run_task = [
 [tasks.test_rs_macros]
 category = "02 - Test"
 private = true
-cwd = "${PROJECT_ROOT_FOLDER}"
+cwd = "${PROJECT_TABSDATA_ROOT_FOLDER}"
 script_runner = "@duckscript"
 script = [
     '''
@@ -45,61 +45,61 @@ run_task = [
 [tasks.test_rs_modules_standard]
 category = "02 - Test"
 private = true
-cwd = "${PROJECT_ROOT_FOLDER}"
+cwd = "${PROJECT_TABSDATA_ROOT_FOLDER}"
 script_runner = "@duckscript"
 script = [
     '''
     !include_files ./make/libraries/log.ds
 
     if eq ${td-cargo} "cross"
-        debug "🚀 ${td-cargo} %{td-toolchain-token}%{td-toolchain} test %{td-target-token} %{td-target} --jobs 8 --all-targets --profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_ROOT_CARGO_TOML} --features ${modules-test-features}"
-        exec --fail-on-error ${td-cargo} %{td-toolchain-token}%{td-toolchain} test %{td-target-token} %{td-target} --jobs 8 --all-targets --profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_ROOT_CARGO_TOML} --features ${modules-test-features}
+        debug "🚀 ${td-cargo} %{td-toolchain-token}%{td-toolchain} test %{td-target-token} %{td-target} --jobs 8 --all-targets --profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_TABSDATA_CARGO_TOML} --features ${modules-test-features}"
+        exec --fail-on-error ${td-cargo} %{td-toolchain-token}%{td-toolchain} test %{td-target-token} %{td-target} --jobs 8 --all-targets --profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_TABSDATA_CARGO_TOML} --features ${modules-test-features}
     else
-        debug "🚀 ${td-cargo} %{td-toolchain-token}%{td-toolchain} nextest run %{td-target-token} %{td-target} --test-threads 8 --cargo-profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_ROOT_CARGO_TOML} --features ${modules-test-features} --all-targets"
-        exec --fail-on-error ${td-cargo} %{td-toolchain-token}%{td-toolchain} nextest run %{td-target-token} %{td-target} --test-threads 8 --cargo-profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_ROOT_CARGO_TOML} --features ${modules-test-features} --all-targets
+        debug "🚀 ${td-cargo} %{td-toolchain-token}%{td-toolchain} nextest run %{td-target-token} %{td-target} --test-threads 8 --cargo-profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_TABSDATA_CARGO_TOML} --features ${modules-test-features} --all-targets"
+        exec --fail-on-error ${td-cargo} %{td-toolchain-token}%{td-toolchain} nextest run %{td-target-token} %{td-target} --test-threads 8 --cargo-profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_TABSDATA_CARGO_TOML} --features ${modules-test-features} --all-targets
     end
     ''']
 
 [tasks.test_rs_modules_logging]
 category = "02 - Test"
 private = true
-cwd = "${PROJECT_ROOT_FOLDER}"
+cwd = "${PROJECT_TABSDATA_ROOT_FOLDER}"
 script_runner = "@duckscript"
 script = [
     '''
     !include_files ./make/libraries/log.ds
 
     if eq ${td-cargo} "cross"
-        debug "🚀 ${td-cargo} %{td-toolchain-token}%{td-toolchain} test %{td-target-token} %{td-target} --jobs 8 --all-targets --profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_ROOT_CARGO_TOML} --features ${modules-test-features-test_logging} -- test_logging"
-        exec --fail-on-error ${td-cargo} %{td-toolchain-token}%{td-toolchain} test %{td-target-token} %{td-target} --jobs 8 --all-targets --profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_ROOT_CARGO_TOML} --features ${modules-test-features-test_logging} -- test_logginge
+        debug "🚀 ${td-cargo} %{td-toolchain-token}%{td-toolchain} test %{td-target-token} %{td-target} --jobs 8 --all-targets --profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_TABSDATA_CARGO_TOML} --features ${modules-test-features-test_logging} -- test_logging"
+        exec --fail-on-error ${td-cargo} %{td-toolchain-token}%{td-toolchain} test %{td-target-token} %{td-target} --jobs 8 --all-targets --profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_TABSDATA_CARGO_TOML} --features ${modules-test-features-test_logging} -- test_logginge
     else
-        debug "🚀 ${td-cargo} %{td-toolchain-token}%{td-toolchain} nextest run %{td-target-token} %{td-target} --test-threads 8 --cargo-profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_ROOT_CARGO_TOML} --features ${modules-test-features-test_logging} --all-targets -- test_logging"
-        exec --fail-on-error ${td-cargo} %{td-toolchain-token}%{td-toolchain} nextest run %{td-target-token} %{td-target} --test-threads 8 --cargo-profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_ROOT_CARGO_TOML} --features ${modules-test-features-test_logging} --all-targets -- test_logging
+        debug "🚀 ${td-cargo} %{td-toolchain-token}%{td-toolchain} nextest run %{td-target-token} %{td-target} --test-threads 8 --cargo-profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_TABSDATA_CARGO_TOML} --features ${modules-test-features-test_logging} --all-targets -- test_logging"
+        exec --fail-on-error ${td-cargo} %{td-toolchain-token}%{td-toolchain} nextest run %{td-target-token} %{td-target} --test-threads 8 --cargo-profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_TABSDATA_CARGO_TOML} --features ${modules-test-features-test_logging} --all-targets -- test_logging
     end
     ''']
 
 [tasks.test_rs_modules_tower]
 category = "02 - Test"
 private = true
-cwd = "${PROJECT_ROOT_FOLDER}"
+cwd = "${PROJECT_TABSDATA_ROOT_FOLDER}"
 script_runner = "@duckscript"
 script = [
     '''
     !include_files ./make/libraries/log.ds
 
     if eq ${td-cargo} "cross"
-        debug "🚀 ${td-cargo} %{td-toolchain-token}%{td-toolchain} test %{td-target-token} %{td-target} --jobs 8 --all-targets --profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_ROOT_CARGO_TOML} --features ${modules-test-features-test_tower_metadata} -- test_tower_metadatae"
-        exec --fail-on-error ${td-cargo} %{td-toolchain-token}%{td-toolchain} test %{td-target-token} %{td-target} --jobs 8 --all-targets --profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_ROOT_CARGO_TOML} --features ${modules-test-features-test_tower_metadata} -- test_tower_metadata
+        debug "🚀 ${td-cargo} %{td-toolchain-token}%{td-toolchain} test %{td-target-token} %{td-target} --jobs 8 --all-targets --profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_TABSDATA_CARGO_TOML} --features ${modules-test-features-test_tower_metadata} -- test_tower_metadatae"
+        exec --fail-on-error ${td-cargo} %{td-toolchain-token}%{td-toolchain} test %{td-target-token} %{td-target} --jobs 8 --all-targets --profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_TABSDATA_CARGO_TOML} --features ${modules-test-features-test_tower_metadata} -- test_tower_metadata
     else
-        debug "🚀 ${td-cargo} %{td-toolchain-token}%{td-toolchain} nextest run %{td-target-token} %{td-target} --test-threads 8 --cargo-profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_ROOT_CARGO_TOML} --features ${modules-test-features-test_tower_metadata} --all-targets -- test_tower_metadata"
-        exec --fail-on-error ${td-cargo} %{td-toolchain-token}%{td-toolchain} nextest run %{td-target-token} %{td-target} --test-threads 8 --cargo-profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_ROOT_CARGO_TOML} --features ${modules-test-features-test_tower_metadata} --all-targets -- test_tower_metadata
+        debug "🚀 ${td-cargo} %{td-toolchain-token}%{td-toolchain} nextest run %{td-target-token} %{td-target} --test-threads 8 --cargo-profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_TABSDATA_CARGO_TOML} --features ${modules-test-features-test_tower_metadata} --all-targets -- test_tower_metadata"
+        exec --fail-on-error ${td-cargo} %{td-toolchain-token}%{td-toolchain} nextest run %{td-target-token} %{td-target} --test-threads 8 --cargo-profile ${td-profile} --workspace --manifest-path ${PROJECT_RS_TABSDATA_CARGO_TOML} --features ${modules-test-features-test_tower_metadata} --all-targets -- test_tower_metadata
     end
     ''']
 
 [tasks.test_rs_expansions]
 category = "02 - Test"
-private = false
-cwd = "${PROJECT_ROOT_FOLDER}"
+private = true
+cwd = "${PROJECT_TABSDATA_ROOT_FOLDER}"
 script_runner = "@duckscript"
 script = [
     '''
