[TD-165] Fix test_requirements for cross-platform paths support (#164)

--- a/server/libraries/td-test/Cargo.toml
+++ b/server/libraries/td-test/Cargo.toml
@@ -58,6 +58,7 @@ chrono = { workspace = true }
 hex = { workspace = true }
 homedir = { workspace = true }
 lazy_static = { workspace = true }
+path-slash = { workspace = true }
 sha2= { workspace = true }
 sqlx = { workspace = true, features = ["runtime-tokio", "macros"] }
 testdir = { workspace = true }
